# quant-demo

./: .gitignore  CLAUDE.md  GIT_WORKTREE.md  README.md  compare.ipynb  config.py  feature.md  main.py  new-plan.md  plan.md  presentation.md  prompt.txt  pull-data-example.py  pyproject.toml  run_pipeline.ipynb  run_pipeline.py  taiex_chart.py  technical-indicator.md  validation_explained.ipynb
backtest/: engine.py  metrics.py  portfolio.py  strategies.py
data/: ingest.py
data/processed/: best_params.json  features.parquet  lgbm_model.txt
data/raw/: twii.parquet
features/: alpha.py
model/: train.py  validation.py
models/: best_params.json  lgbm.txt
monitoring/: drift.py
notebooks/: run_pipeline.ipynb  run_pipeline_without_feature_drop.ipynb
reports/: temporal_consistency.csv
src/twii_forecast/: config.py  data.py  dataset.py  evaluate.py  explain.py  feature_selection.py  features.py  model.py  monitor.py  pipeline.py  plots.py  scaling.py  split.py  target.py
tests/: test_feature_selection.py  test_leakage.py
